# Lamarck-Evolutionary-Agent-Network

./: .coverage  .env.example  .gitignore  .mcp.json  AGENT_TASK.md  CLAUDE.md  HIERARCHY_GAP_ANALYSIS.md  HITL_README.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  ITERATION_2_PLAN.md  ITERATION_3_PLAN.md  M2_COMPACTION_README.md  M2_REPRODUCTION_README.md  M2_SELECTION_README.md  NEXT_ITTERATION_OUTLINE.MD  README.md  TASK_PLAN.md  WORK_DIVISION.md  benchmark_rules.py  main.py  main_v2.py  migrate.py  psd.md  pyproject.toml  pytest.ini  run_experiment.sh  spec.md  test_agent_weighting.py  test_async_orchestration.py  test_bidirectional_flow.py  test_closed_loop_refinement.py  test_imports.py  test_memory_decay.py  test_state.py
analysis/: EXPERIMENTS.md  architecture-implementation-gap.md  configuration-troubleshooting.md  hierarchical-visualization-implementation.md  scoring-system-explained.md  v3-hierarchical-implementation-guide.md  v3-implementation-summary.md  visualization-update-needed.md
config/: README.md
config/docs/: ai-fundamentals.md  body-role.md  conclusion-role.md  coordinator-role.md  fact-checker-role.md  intro-role.md  researcher-role.md  stylist-role.md
config/experiments/: default.yml  fast_test.yml  test.yml
config/prompts/: agents.yml
docs/: MIGRATION_GUIDE.md  NEXT_ITTERATION.md  PIPELINE_V2_GUIDE.md  conceptual-drift-analysis.md  custom-evaluation.md  extending-agents.md  human-in-the-loop-guide.md  langgraph-patterns.md  numpy-serialization-issue.md  technical.md  v1-cleanup-summary.md
docs/agent-weighting/: AGENT_TASK.md
docs/api/: README.md
docs/async-orchestration/: AGENT_TASK.md
docs/bidirectional-flow/: AGENT_TASK.md
docs/brainstorming/: 2025-10-20-FINAL-SESSION-SUMMARY.md  2025-10-20-M2-LANGGRAPH-ARCHITECTURE.md  2025-10-20-M2-PARALLEL-DEVELOPMENT-SETUP.md  2025-10-20-M2-PHASE1-COMPLETE.md  2025-10-20-M2-PHASE1-MERGED.md  2025-10-20-M2-SUBGRAPH-ARCHITECTURE.md  2025-10-20-SESSION-COMPLETE-SUMMARY.md  2025-10-20-architecture-implementation-complete.md  2025-10-20-implementation-progress-summary.md  2025-10-20-there-were-some-aspects-of-the-framework-which-wer.txt  ANOTHER_ASPECT.MD  IMPLEMENTATION_ORCHESTRATION.md  IMPLEMENTATION_ORCHESTRATION_REVISED.md  IMPLEMENTATION_PLAN_FINAL.md  REFINEMENT.md
docs/closed-loop-refinement/: AGENT_TASK.md
docs/development/: README.md
docs/hierarchical-structure/: AGENT_TASK.md
docs/iteration-plans/: IMPLEMENTATION_STATUS.md  ITERATION_3_IMPLEMENTATION_GUIDE.md
docs/langgraph-orchestration/: AGENT_TASK.md
docs/memory-decay/: AGENT_TASK.md
docs/meta-agent/: AGENT_TASK.md
docs/planning/: CONSOLIDATED_PLAN.md  M2_EVOLUTION_PLAN.md
docs/project-foundation/: AGENT_TASK.md
docs/semantic-distance/: AGENT_TASK.md
docs/task_plans/: task5-aggregator-reporting.md  task6-error-handling.md
docs/visualization/: AGENT_TASK.md
examples/: advanced_workflow.py  basic_validation.py  compaction_demo.py  custom_validator.py  hitl_demo.py  pipeline_v2_demo.py  reasoning_pattern_demo.py  simple_workflow_demo.py  streaming_validation.py  v2_workflow_integration.py  visualization_demo.py
scripts/: test_runpod.py  validate_run.py
src/: __init__.py
src/agents/: __init__.py  aggregator.py  base.py  business_rules.py  cross_reference.py  data_quality.py  error_handler.py  registry.py  rule_authoring.py  schema_validator.py  supervisor.py
src/aggregator/: __init__.py  confidence.py  error_analysis.py  report_generator.py  result_merger.py  visualization.py
src/graph/: __init__.py  routing.py  state.py  workflow.py
src/hvas_mini/: __init__.py  agent_pool.py  agents.py  evaluation.py  evolution.py  memory.py  pipeline.py  state.py  visualization.py
src/lean/: agent_pool.py  agents.py  base_agent.py  base_agent_v2.py  compaction.py  config_loader.py  context_manager.py  coordinator.py  evaluation.py  graph_debugger.py  human_in_the_loop.py  logger.py  pipeline.py  pipeline_v2.py  reasoning_memory.py  reproduction.py  selection.py  shared_rag.py  specialists.py  state.py  visualization.py  web_search.py
src/models/: __init__.py  error_detail.py  (+1 more)
tests/: __init__.py  conftest.py  test_agent_factory_v2.py  test_agent_pool.py  test_agent_weighting.py  test_aggregator.py  test_async_orchestration.py  test_bidirectional_flow.py  test_chaos.py  test_circuit_breaker.py  test_closed_loop_refinement.py  test_compaction.py  test_confidence.py  test_cross_reference.py  test_degradation.py  test_error_analysis.py  test_error_context.py  test_error_handler.py  test_evolution_integration.py  test_executor.py  test_hierarchical_structure.py  test_imports.py  test_integration.py  test_json_schema.py  test_memory.py  test_memory_decay.py  test_memory_manager.py  test_meta_agent.py  test_models.py  test_performance.py  test_pipeline.py  test_pipeline_v2.py  test_quality_checks.py  test_reasoning_integration.py  test_recovery.py  test_report_generator.py  test_reproduction.py  test_result_merger.py  test_retry.py  test_rule_dsl.py  (+9 more)
(+68 files in other folders)
